--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
             <scope>test</scope>
         </dependency>
 
+        <!--    I am aware, that the application should be written in plain java,
+        but there was a chance that I wouldn't be able to complete it in time,
+        so I used jackson library in order to deserialize  -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
